chore: cleanup temporary files from git
- Remove from tracking: feature1-*.md, feature2-*.md, sessions.log, changes.log, settings.json
- Move mini-app-research.md to .claude/research/ (gitignored, for temporary use)
- Update .gitignore to exclude log files and research folder

These files are either:
- Temporary session logs (auto-generated)
- Research docs (will be deleted after implementation)
- Empty config files

--- a/.gitignore
+++ b/.gitignore
@@ -53,4 +53,8 @@ out/
 
 ### Claude Code ###
 .claude/team-state.md
+.claude/sessions.log
+.claude/changes.log
+.claude/settings.json
+.claude/research/
 .mcp.json
