--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -31,9 +31,42 @@ services:
       DB_USERNAME: ${DB_USERNAME:-chatkeep}
       DB_PASSWORD: ${DB_PASSWORD:?DB_PASSWORD is required}
       TELEGRAM_BOT_TOKEN: ${TELEGRAM_BOT_TOKEN:?TELEGRAM_BOT_TOKEN is required}
+      JWT_SECRET: ${JWT_SECRET:?JWT_SECRET is required}
+      MINI_APP_URL: ${MINI_APP_URL:-}
       LOG_LEVEL: ${LOG_LEVEL:-INFO}
+    restart: always
+    healthcheck:
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:8080/actuator/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
+
+  nginx:
+    image: nginx:alpine
+    container_name: chatkeep-nginx
+    depends_on:
+      app:
+        condition: service_healthy
+    volumes:
+      - ./docker/nginx/mini-app.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./mini-app/dist:/usr/share/nginx/html:ro
     ports:
-      - "8080:8080"
+      - "80:80"
+    restart: always
+    healthcheck:
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+
+  cloudflared:
+    image: cloudflare/cloudflared:latest
+    container_name: chatkeep-tunnel
+    command: tunnel --no-autoupdate --url http://nginx:80
+    depends_on:
+      nginx:
+        condition: service_healthy
     restart: always
 
 volumes:
