--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,16 @@ LOG_LEVEL=INFO
 # Must be at least 32 characters. Generate with: openssl rand -base64 48
 JWT_SECRET=some_jw-token_min_32_chars
 
+# JWT expiration in hours (default: 24)
+JWT_EXPIRATION_HOURS=24
+
+# Mini App URL (for Telegram Mini App integration)
+MINI_APP_URL=
+
 # Production deployment only:
 # GITHUB_REPOSITORY=owner/chatkeep
 # IMAGE_TAG=latest
+
+# Monitoring (optional)
+GRAFANA_ADMIN_USER=admin
+GRAFANA_ADMIN_PASSWORD=admin
