--- a/docker/nginx/sites/admin.chatmoderatorbot.ru.conf
+++ b/docker/nginx/sites/admin.chatmoderatorbot.ru.conf
@@ -66,6 +66,18 @@ server {
         proxy_read_timeout 60s;
     }
 
+    # Auth proxy (Telegram Login Widget page)
+    location /auth/ {
+        proxy_pass http://app:8080/auth/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 60s;
+        proxy_read_timeout 60s;
+    }
+
     # Health check
     location /health {
         access_log off;
