--- a/docker/nginx/sites/admin.chatmoderatorbot.ru.conf
+++ b/docker/nginx/sites/admin.chatmoderatorbot.ru.conf
@@ -1,5 +1,6 @@
 # Admin App - admin.chatmoderatorbot.ru
 
+# HTTP -> HTTPS redirect
 server {
     listen 80;
     listen [::]:80;
@@ -9,6 +10,23 @@ server {
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
+
+    # Redirect all other traffic to HTTPS
+    location / {
+        return 301 https://$host$request_uri;
+    }
+}
+
+# HTTPS server
+server {
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
+    server_name admin.chatmoderatorbot.ru;
+
+    # SSL
+    ssl_certificate /etc/letsencrypt/live/chatmoderatorbot.ru/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/chatmoderatorbot.ru/privkey.pem;
+    include /etc/nginx/conf.d/ssl.conf;
 
     # Serve Admin WASM App
     root /var/www/admin;
