--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -31,6 +31,7 @@ services:
       DB_USERNAME: ${DB_USERNAME:-chatkeep}
       DB_PASSWORD: ${DB_PASSWORD:?DB_PASSWORD is required}
       TELEGRAM_BOT_TOKEN: ${TELEGRAM_BOT_TOKEN:?TELEGRAM_BOT_TOKEN is required}
+      TELEGRAM_BOT_USERNAME: ${TELEGRAM_BOT_USERNAME:-chatmoderatorbot}
       JWT_SECRET: ${JWT_SECRET:?JWT_SECRET is required}
       MINI_APP_URL: ${MINI_APP_URL:-}
       LOG_LEVEL: ${LOG_LEVEL:-INFO}
