--- a/.github/workflows/deploy-files-to-server.yml
+++ b/.github/workflows/deploy-files-to-server.yml
@@ -16,6 +16,22 @@ jobs:
         with:
           ref: production
 
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+          cache-dependency-path: mini-app/package-lock.json
+
+      - name: Build Mini App
+        run: |
+          echo "Building Mini App..."
+          cd mini-app
+          npm ci
+          npm run build
+          echo "✓ Mini App built"
+          ls -la dist/
+
       - name: Create tarball of production files
         run: |
           echo "Creating tarball..."
