--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,30 @@ jobs:
       - name: Build and test
         run: ./gradlew build
 
+      - name: Generate OpenAPI Schema
+        run: |
+          mkdir -p build/openapi
+          ./gradlew bootRun &
+          BOOT_PID=$!
+          echo "Waiting for Spring Boot to start..."
+          for i in {1..60}; do
+            if curl -s http://localhost:8080/actuator/health > /dev/null 2>&1; then
+              echo "Application is up!"
+              break
+            fi
+            sleep 1
+          done
+          curl -o build/openapi/openapi.json http://localhost:8080/v3/api-docs
+          kill $BOOT_PID || true
+          wait $BOOT_PID 2>/dev/null || true
+
+      - name: Upload OpenAPI Schema
+        uses: actions/upload-artifact@v4
+        with:
+          name: openapi-schema
+          path: build/openapi/openapi.json
+          retention-days: 1
+
       - name: Upload test results
         uses: actions/upload-artifact@v4
         if: always()
@@ -102,4 +126,73 @@ jobs:
         with:
           name: admin-wasm
           path: chatkeep-admin/composeApp/build/kotlin-webpack/wasmJs/productionExecutable/
+          retention-days: 7
+
+  contract-tests:
+    name: Contract Tests (Mobile vs Backend API)
+    needs: [backend]
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Download OpenAPI Schema
+        uses: actions/download-artifact@v4
+        with:
+          name: openapi-schema
+          path: ./openapi
+
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+
+      - name: Generate Fixtures from OpenAPI
+        run: |
+          # Install dependencies if needed
+          pip install pyyaml
+
+          # Create fixtures directory
+          mkdir -p chatkeep-admin/core/network/src/jvmTest/resources/fixtures
+
+          # Run fixture generation script
+          # This script should parse openapi/openapi.json and create JSON fixture files
+          if [ -f scripts/generate-fixtures.py ]; then
+            python3 scripts/generate-fixtures.py openapi/openapi.json chatkeep-admin/core/network/src/jvmTest/resources/fixtures
+          else
+            echo "Warning: scripts/generate-fixtures.py not found. Skipping fixture generation."
+            echo "Contract tests will use existing fixtures if available."
+          fi
+
+      - name: Setup Java 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v4
+        with:
+          gradle-version: wrapper
+          cache-read-only: ${{ github.ref != 'refs/heads/main' }}
+
+      - name: Run Contract Tests
+        working-directory: chatkeep-admin
+        run: ./gradlew :core:network:jvmTest
+
+      - name: Upload Test Results
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: contract-test-results
+          path: chatkeep-admin/core/network/build/reports/tests/jvmTest
+          retention-days: 7
+
+      - name: Upload Test Report
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: contract-test-failures
+          path: chatkeep-admin/core/network/build/test-results/jvmTest
           retention-days: 7
