--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -176,10 +176,14 @@ jobs:
 
       - name: Prepare deployment directories
         uses: appleboy/ssh-action@v1.2.0
+        env:
+          GHCR_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GHCR_USER: ${{ github.actor }}
         with:
           host: ${{ vars.DEPLOY_HOST }}
           username: ${{ vars.DEPLOY_USER }}
           key: ${{ secrets.DEPLOY_SSH_KEY }}
+          envs: GHCR_TOKEN,GHCR_USER
           script: |
             # Ensure deployment directory exists
             echo "Preparing deployment directories..."
@@ -196,6 +200,10 @@ jobs:
               echo "Fixing GITHUB_REPOSITORY in .env to lowercase..."
               sed -i 's/GITHUB_REPOSITORY=AndVl1/GITHUB_REPOSITORY=andvl1/g' .env
             fi
+
+            # Login to GitHub Container Registry
+            echo "Logging into GitHub Container Registry..."
+            echo "$GHCR_TOKEN" | docker login ghcr.io -u "$GHCR_USER" --password-stdin
 
             # Pull latest Docker image
             echo "Pulling latest Docker image..."
