feat: enable Gradle caching for WASM builds in deploy workflow
- Replace cache-disabled: true with cache-read-only strategy
- Main branch writes cache, feature branches read-only
- Expected speedup: 8-10 minutes → 1-2 minutes (5-8x faster)
- Follows same pattern as ci.yml workflow

Technical details:
- Caches ~/.gradle/caches (dependencies)
- Caches ~/.gradle/caches/build-cache-1 (task outputs)
- Caches ~/.konan (Kotlin/Native & WASM compiler cache)
- Managed by cleanup workflow (2+ days, 5GB LRU limit)

This drastically reduces WASM compilation time by reusing cached
Gradle dependencies and Kotlin compiler outputs.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -114,7 +114,7 @@ jobs:
         uses: gradle/actions/setup-gradle@v4
         with:
           gradle-version: wrapper
-          cache-disabled: true
+          cache-read-only: ${{ github.ref != 'refs/heads/main' }}
 
       - name: Build WASM
         run: ./gradlew -p chatkeep-admin :composeApp:wasmJsBrowserDistribution
