fix: add packages:read permission to deploy job
- Fixes "denied" error when pulling from GHCR
- GITHUB_TOKEN needs packages:read scope to pull images
- Without this permission, docker login succeeds but pull fails

Resolves deployment failure after GHCR authentication.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -134,6 +134,7 @@ jobs:
     needs: [build-and-push, build-mini-app, build-admin-wasm]
     permissions:
       contents: read
+      packages: read
 
     # Only deploy if server credentials are configured
     if: vars.DEPLOY_HOST != ''
