--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -106,45 +106,46 @@ jobs:
           retention-days: 1
           if-no-files-found: error
 
-  build-admin-wasm:
-    name: Build Admin WASM
-    runs-on: ubuntu-latest
-
-    # Skip if no secrets configured
-    if: github.event_name == 'workflow_dispatch' || vars.DEPLOY_ENABLED == 'true'
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Java 17
-        uses: actions/setup-java@v4
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-
-      - name: Setup Gradle
-        uses: gradle/actions/setup-gradle@v4
-        with:
-          gradle-version: wrapper
-          cache-read-only: ${{ github.ref != 'refs/heads/main' }}
-
-      - name: Build WASM
-        run: ./gradlew -p chatkeep-admin :composeApp:wasmJsBrowserDistribution
-
-      - name: Upload WASM artifact
-        uses: actions/upload-artifact@v4
-        if: success()
-        with:
-          name: admin-wasm
-          path: chatkeep-admin/composeApp/build/dist/wasmJs/productionExecutable/
-          retention-days: 1
-          if-no-files-found: error
+# TEMPORARILY DISABLED FOR TESTING
+#  build-admin-wasm:
+#    name: Build Admin WASM
+#    runs-on: ubuntu-latest
+#
+#    # Skip if no secrets configured
+#    if: github.event_name == 'workflow_dispatch' || vars.DEPLOY_ENABLED == 'true'
+#
+#    steps:
+#      - name: Checkout code
+#        uses: actions/checkout@v4
+#
+#      - name: Set up Java 17
+#        uses: actions/setup-java@v4
+#        with:
+#          java-version: '17'
+#          distribution: 'temurin'
+#
+#      - name: Setup Gradle
+#        uses: gradle/actions/setup-gradle@v4
+#        with:
+#          gradle-version: wrapper
+#          cache-read-only: ${{ github.ref != 'refs/heads/main' }}
+#
+#      - name: Build WASM
+#        run: ./gradlew -p chatkeep-admin :composeApp:wasmJsBrowserDistribution
+#
+#      - name: Upload WASM artifact
+#        uses: actions/upload-artifact@v4
+#        if: success()
+#        with:
+#          name: admin-wasm
+#          path: chatkeep-admin/composeApp/build/dist/wasmJs/productionExecutable/
+#          retention-days: 1
+#          if-no-files-found: error
 
   deploy:
     name: Deploy to Server
     runs-on: ubuntu-latest
-    needs: [build-and-push, build-mini-app, build-admin-wasm]
+    needs: [build-and-push, build-mini-app]  # build-admin-wasm temporarily disabled
     permissions:
       contents: read
       packages: read
@@ -180,11 +181,11 @@ jobs:
           name: mini-app-dist
           path: mini-app/dist/
 
-      - name: Download WASM artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: admin-wasm
-          path: chatkeep-admin/composeApp/build/dist/wasmJs/productionExecutable/
+#      - name: Download WASM artifact
+#        uses: actions/download-artifact@v4
+#        with:
+#          name: admin-wasm
+#          path: chatkeep-admin/composeApp/build/dist/wasmJs/productionExecutable/
 
       - name: Log deployment info
         run: |
@@ -307,15 +308,15 @@ jobs:
           target: "${{ vars.DEPLOY_PATH || '~/chatkeep' }}"
           overwrite: true
 
-      - name: Copy WASM files to server
-        uses: appleboy/scp-action@v0.1.7
-        with:
-          host: ${{ steps.set-env.outputs.DEPLOY_HOST }}
-          username: ${{ vars.DEPLOY_USER }}
-          key: ${{ env.IS_PRODUCTION == 'true' && secrets.DEPLOY_SSH_KEY || secrets.TEST_SSH_PRIVATE_KEY }}
-          source: "chatkeep-admin/composeApp/build/dist/wasmJs/productionExecutable/*"
-          target: "${{ vars.DEPLOY_PATH || '~/chatkeep' }}"
-          overwrite: true
+#      - name: Copy WASM files to server
+#        uses: appleboy/scp-action@v0.1.7
+#        with:
+#          host: ${{ steps.set-env.outputs.DEPLOY_HOST }}
+#          username: ${{ vars.DEPLOY_USER }}
+#          key: ${{ env.IS_PRODUCTION == 'true' && secrets.DEPLOY_SSH_KEY || secrets.TEST_SSH_PRIVATE_KEY }}
+#          source: "chatkeep-admin/composeApp/build/dist/wasmJs/productionExecutable/*"
+#          target: "${{ vars.DEPLOY_PATH || '~/chatkeep' }}"
+#          overwrite: true
 
       - name: Verify configs and restart services
         uses: appleboy/ssh-action@v1.2.0
