feat: add TELEGRAPH_TOKEN environment variable to docker-compose files

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -47,6 +47,7 @@ services:
       TWITCH_CLIENT_SECRET: ${TWITCH_CLIENT_SECRET:-}
       TWITCH_WEBHOOK_URL: ${TWITCH_WEBHOOK_URL:-}
       TWITCH_WEBHOOK_SECRET: ${TWITCH_WEBHOOK_SECRET:-}
+      TELEGRAPH_TOKEN: ${TELEGRAPH_TOKEN:-}
       SPRING_PROFILES_ACTIVE: ${SPRING_PROFILES_ACTIVE:-}
     restart: always
     healthcheck:
