--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,7 @@ services:
       TELEGRAM_BOT_TOKEN: ${TELEGRAM_BOT_TOKEN:-}
       TELEGRAM_ADMINBOT_TOKEN: ${TELEGRAM_ADMINBOT_TOKEN:-}
       TELEGRAM_ADMINBOT_USERNAME: ${TELEGRAM_ADMINBOT_USERNAME:-}
+      TELEGRAPH_TOKEN: ${TELEGRAPH_TOKEN:-}
       LOG_LEVEL: ${LOG_LEVEL:-INFO}
     ports:
       - "8080:8080"
