fix: add TELEGRAPH_TOKEN to deployment and improve timeline compression
- Add TELEGRAPH_TOKEN to deploy.yml workflow (pass to server .env)
- Change timeline compression message to show skipped count
- Now shows "(пропущено событий: N)" instead of "(+N записей в полном таймлайне)"

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -500,12 +500,13 @@ jobs:
           TWITCH_CLIENT_SECRET: ${{ env.IS_PRODUCTION == 'true' && secrets.PROD_TWITCH_CLIENT_SECRET || secrets.TEST_TWITCH_CLIENT_SECRET }}
           TWITCH_WEBHOOK_URL: ${{ env.IS_PRODUCTION == 'true' && vars.PROD_TWITCH_WEBHOOK_URL || vars.TEST_TWITCH_WEBHOOK_URL }}
           TWITCH_WEBHOOK_SECRET: ${{ env.IS_PRODUCTION == 'true' && secrets.PROD_TWITCH_WEBHOOK_SECRET || secrets.TEST_TWITCH_WEBHOOK_SECRET }}
+          TELEGRAPH_TOKEN: ${{ secrets.TELEGRAPH_TOKEN }}
           SPRING_PROFILES_ACTIVE: ${{ env.IS_PRODUCTION == 'true' && '' || 'test-env' }}
         with:
           host: ${{ steps.set-env.outputs.DEPLOY_HOST }}
           username: ${{ vars.DEPLOY_USER }}
           key: ${{ env.IS_PRODUCTION == 'true' && secrets.DEPLOY_SSH_KEY || secrets.TEST_SSH_PRIVATE_KEY }}
-          envs: GHCR_TOKEN,GHCR_USER,BOT_TOKEN,BOT_USERNAME,ADMINBOT_TOKEN,ADMINBOT_USERNAME,DB_PASSWORD,JWT_SECRET,GRAFANA_PASSWORD,DOMAIN,ENV_NAME,PULL_BACKEND,ADMIN_USER_IDS,TWITCH_CLIENT_ID,TWITCH_CLIENT_SECRET,TWITCH_WEBHOOK_URL,TWITCH_WEBHOOK_SECRET,SPRING_PROFILES_ACTIVE
+          envs: GHCR_TOKEN,GHCR_USER,BOT_TOKEN,BOT_USERNAME,ADMINBOT_TOKEN,ADMINBOT_USERNAME,DB_PASSWORD,JWT_SECRET,GRAFANA_PASSWORD,DOMAIN,ENV_NAME,PULL_BACKEND,ADMIN_USER_IDS,TWITCH_CLIENT_ID,TWITCH_CLIENT_SECRET,TWITCH_WEBHOOK_URL,TWITCH_WEBHOOK_SECRET,TELEGRAPH_TOKEN,SPRING_PROFILES_ACTIVE
           script: |
             # Ensure deployment directory exists
             echo "Preparing deployment directories..."
@@ -544,6 +545,7 @@ jobs:
               "TWITCH_CLIENT_SECRET=$TWITCH_CLIENT_SECRET" \
               "TWITCH_WEBHOOK_URL=$TWITCH_WEBHOOK_URL" \
               "TWITCH_WEBHOOK_SECRET=$TWITCH_WEBHOOK_SECRET" \
+              "TELEGRAPH_TOKEN=$TELEGRAPH_TOKEN" \
               "SPRING_PROFILES_ACTIVE=$SPRING_PROFILES_ACTIVE" > .env
             echo "Generated .env file:"
             cat .env
